--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,12 +30,13 @@ services:
       MYSQL_DATABASE: almoxif
       MYSQL_USER: almox
       MYSQL_PASSWORD: almox123
+      TZ: America/Sao_Paulo
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
       - ./docker/mysql-init:/docker-entrypoint-initdb.d
-    command: --sql-mode=""
+    command: --sql-mode="" --innodb_flush_log_at_trx_commit=2 --skip-name-resolve
     networks:
       - almoxif_net
 
